Feito responsividade da section services

--- a/Principal/index.html
+++ b/Principal/index.html
@@ -77,6 +77,7 @@
                         trânsparência e efieciência, para que nossos clientes foquem em seus negócios
                     </p>
                 </div>
+                <img class="plus" src="../icon/plus.png" alt="">
                 <div class="card">
                     <h2>VISÃO</h2>
                     <p>
@@ -85,6 +86,7 @@
                         competentes e motivados
                     </p>
                 </div>
+                <img class="plus" src="../icon/plus.png" alt="">
                 <div class="card">
                     <h2>VALORES</h2>
                     <p>
@@ -100,15 +102,30 @@
         <section id="services">
             <div class="container">
                 <h1>Serviços</h1>
-                <div class="img_gater bottom">
-                    <img class="img_venom" src="../img/Services/container_portaria.png" alt="">
+                <div class="img_services">
+                    <div class="img_gater bottom">
+                        <img class="img_venom" src="../img/Services/container_portaria.png" alt="">
+                    </div>
+                    <div class="img_clear bottom text_right">
+                        <img src="../img/Services/CONTAINER_LIMPEZA.png" alt="">
+                    </div>
+                    <div class="img_garden bottom">
+                        <img class="img_venom" src="../img/Services/container_garden.png" alt="">
+                    </div>
                 </div>
-                <div class="img_clear bottom text_right">
-                    <img src="../img/Services/CONTAINER_LIMPEZA.png" alt="">
+
+                <div class="img_services_toggle">
+                    <div class="img_toggle bottom">
+                        <img src="../img/Services/grupo portaria toggle.png" alt="">
+                    </div>
+                    <div class="img_toggle bottom">
+                        <img src="../img/Services/grupo limpeza toggle.png" alt="">
+                    </div>
+                    <div class="img_toggle bottom">
+                        <img src="../img/Services/grupo garden toggle.png" alt="">
+                    </div>
                 </div>
-                <div class="img_garden bottom">
-                    <img class="img_venom" src="../img/Services/container_garden.png" alt="">
-                </div>
+                
             </div>
         </section>
 
