Feito o menu toggle e algumas alterações na responsividades

--- a/Principal/index.html
+++ b/Principal/index.html
@@ -21,34 +21,44 @@
     </div>
 
     <header id="header">
-        <nav class="container">
-            <a href="#">
+        <div class="container">
+            <a href="#home">
                 <img class="logo" src="../img/Logo/icon.png" alt="logo">
             </a>
-            <div class="menu">
-                <ul>
-                    <li><a href="#home">Inicio</a></li>
-                    <li><a href="#about">Sobre</a></li>
-                    <li><a href="#services">Serviços</a></li>
-                    <li><a href="#testimonials">Testemunhos</a></li>
-                    <li><a href="#contact">Contato</a></li>
-                </ul>
+            <div class="menu_section">
+                <div class="menu_toggle">
+                    <div class="one"></div>
+                    <div class="two"></div>
+                    <div class="three"></div>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="#home">Inicio</a></li>
+                        <li><a href="#about">Sobre</a></li>
+                        <li><a href="#services">Serviços</a></li>
+                        <li><a href="#testimonials">Testemunhos</a></li>
+                        <li><a href="#contact">Contato</a></li>
+                    </ul>
+                </nav>
             </div>
-        </nav>
+        </div>
     </header>
 
     <main>
         <section id="home">
             <div class="container">
-                <img src="../img/sections/Image_contrato_lado_esquerdo estilizado.png"
-                    alt="Um homem escrevendo em uma folha">
+                <div>
+                    <img src="../img/sections/Image_contrato_lado_esquerdo estilizado.png" alt="Um homem escrevendo em uma folha">
+                </div>
                 <div class="h1_btn">
                     <h1><span class="dubai">DUBAI</span><br>SERVIÇOS TERCEIRIZADOS</h1>
                     <a href="#contact">
                         <button class="btn">Contate</button>
                     </a>
                 </div>
-                <img src="../img/sections/Image_contrato_lado_direito estilizado.png" alt="Condominio">
+                <div>
+                    <img src="../img/sections/Image_contrato_lado_direito estilizado.png" alt="Condominio">
+                </div>
             </div>
         </section>
 
@@ -137,6 +147,7 @@
                     <img class="logo" src="../img/partners/brasao_gesp_v_cor.png" alt="brasao do GOV">
                     <img class="logo" src="../img/partners/oneprime.jpg" alt="brasao do condominio One Prime">
                 </div>
+                <div></div>
             </div>
         </section>
 
@@ -204,7 +215,7 @@
         </div>
         <h3>Development by KaBSAlex</h3>
     </footer>
-    <script src="../Script/main.js"></script>
+    <script src="../Script/toggle.js"></script>
 </body>
 
 </html>
