Ajustes no tamanho das imagens, seção services

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta https-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dubai - Serviços Terceirizados</title>
-    <link rel="stylesheet" href="../Style/style.css">
+    <link rel="stylesheet" href="Style/style.css">
+    <link rel="stylesheet" href="Style/responsivo.css">
     <link rel="shortcut icon" href="../img/icon.png" type="image/x-icon">
-    <link rel="stylesheet" href="../Style/responsivo.css">
     <link rel="shortcut icon" href="../img/Logo/icon.png" type="image/x-icon">
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
@@ -31,7 +31,7 @@
                         <li><a href="#home">Inicio</a></li>
                         <li><a href="#about">Sobre</a></li>
                         <li><a href="#services">Serviços</a></li>
-                        <li><a href="#testimonials">Testemunhos</a></li>
+                        <li><a href="#testimonials">Clientes</a></li>
                         <li><a href="#contact">Contato</a></li>
                     </ul>
                 </nav>
@@ -82,8 +82,7 @@
             <div class="cards container ">
                 <div class="card">
                     <h2>MISSÃO</h2>
-                    <p>
-                        Atender as necessidades do mercado em serviços de facilities com qualidade,
+                    <p>     Atender as necessidades do mercado em serviços de facilities com qualidade,
                         trânsparência e efieciência, para que nossos clientes foquem em seus negócios
                     </p>
                 </div>
@@ -176,7 +175,6 @@
                             <textarea placeholder="Se preferir, deixa uma mensagem aqui" name="Mensagem" cols="30"
                                 rows="10"></textarea>
                         </div>
-
                         <div class="btn_align">
                             <button id="send" class="btn_form" type="submit" value="click">Enviar</button>
                         </div>
@@ -218,6 +216,7 @@
         </div>
         <h3>Development by KaBSAlex</h3>
     </footer>
+    
     <script src="../Script/toggle.js"></script>
     <script src="../Script/inputValidation.js" defer></script>
     <script src="../Script/scroll.js"></script>
